<resources>
    <string name="app_name">MyLib</string>
    <string name="new_user">new user?</string>
    <string name="register">Register</string>
    <string name="login">login</string>
    <string name="uid">Email ID</string>
    <string name="password">Password</string>
    <string name="welcome">Welcome</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="new_user1">New User</string>
    <string name="user_id">User id</string>
    <string name="email_id">Email id</string>
    <string name="forgot_password">Forgot password</string>
    <string name="welcome2">Welcome</string>
    <string name="log_out">log out</string>
    <string name="email_id2">Email id:</string>
    <string name="user_id2">User Id:</string>
    <string name="title_activity_home">home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>